kubernetes/test.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: order
      containers:
        - name: order
          image: registry.cn-hangzhou.aliyuncs.com/tskj-faas/test-order:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            runAsUser: 1000
---

apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    service: user
spec:
  ports:
    - port: 8000
      name: http
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      serviceAccountName: user
      containers:
        - name: user
          image: registry.cn-hangzhou.aliyuncs.com/tskj-faas/test-user:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            runAsUser: 1000
---
