kubernetes/test-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: order-ingress
spec:
  rules:
    - host: order.test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: order
              servicePort: 8000
